--- a/Index.html
+++ b/Index.html
@@ -98,7 +98,7 @@ img {
 <div class="footer">
 <hr><font size="2" face="kristen ITC">
 <p style="text-align:center;">
-<u><b>Copyright© 2019 Just Drive Reading
+<u><b>CopyrightÂ© 2019 Just Drive Reading
 	</p></u></b>
 <p style="text-align:center;"><a href="C:\Users\hp\Documents\SonyaSite\Terms&Conditions.html"><i>Terms & Conditions</a>
 		</i></p>
