--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--Just Drive Reading Home Page-->
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\styles.css">
+<link rel="stylesheet" type="text/css" href="https://github.com/JustDriveReading/JDRSite/blob/gh-pages/index.html\CSS\styles.css">
 <link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\.content.css">
 <link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\SlideshowContainer.css">
 <link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\CSS\img.css">
