--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <HTML Lang="en">
 <!--Just Drive Reading Home Page-->
 
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="https://github.com/JustDriveReading/JDRSite/blob/gh-pages/index.html\CSS\styles.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\.content.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\SlideshowContainer.css">
+<link rel="stylesheet" type="text/css" href="CSS\styles.css">
+<link rel="stylesheet" type="text/css" href="CSS\.content.css">
+<link rel="stylesheet" type="text/css" href="CSS\SlideshowContainer.css">
 <link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\CSS\img.css">
 <link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\navbar.css">
 <link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\Roboto.css">
