--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <HTML Lang="en">
 <!--Just Drive Reading Home Page-->
 
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" type="text/css" href="CSS\styles.css">
 <link rel="stylesheet" type="text/css" href="CSS\.content.css">
 <link rel="stylesheet" type="text/css" href="CSS\SlideshowContainer.css">
@@ -39,10 +39,10 @@
 </div></div>
 
  <div class="navbar">
-  <a href="C:\Users\hp\Documents\SonyaSite\JDRIndex.html">Home</a>
-  <a href="C:\Users\hp\Documents\SonyaSite\Booking.html">Prices & Offers</a>
-  <a href="C:\Users\hp\Documents\SonyaSite\UsefulLinks.html">Useful Links </a>
-  <a href="C:\Users\hp\Documents\SonyaSite\Contact.html">Contact</a>
+  <a href="\JDRIndex.html">Home</a>
+  <a href="\Booking.html">Prices & Offers</a>
+  <a href="\UsefulLinks.html">Useful Links </a>
+  <a href="\Contact.html">Contact</a>
 	</div><hr>
 
 <!-- Slideshow container -->
@@ -50,7 +50,7 @@
   <!-- Full-width images with number-->
   <div class="mySlides fade">
     <div class="numbertext">1 / 4</div>
-    <img src="C:\Users\hp\Documents\SonyaSite\Images\CarSlide\Car_01.png" 
+    <img src="Images\CarSlide\Car_01.png" 
     width="990" height="650" border="3" alt="Just Drive Car">
   </div>
 
