--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 </div></div>
 
  <div class="navbar">
-  <a href="\JDRIndex.html">Home</a>
-  <a href="\Booking.html">Prices & Offers</a>
-  <a href="\UsefulLinks.html">Useful Links </a>
-  <a href="\Contact.html">Contact</a>
+  <a href="JDRIndex.html">Home</a>
+  <a href="Booking.html">Prices & Offers</a>
+  <a href="UsefulLinks.html">Useful Links </a>
+  <a href="Contact.html">Contact</a>
 	</div><hr>
 
 <!-- Slideshow container -->
@@ -57,17 +57,17 @@
   <div class="img">
   <div class="mySlides fade">
     <div class="numbertext">2 / 4</div>
-    <img src="C:\Users\hp\Documents\SonyaSite\Images\CarSlide\Car_02.png" 
+    <img src="Images\CarSlide\Car_02.png" 
     width="990" height="650" border="3" alt="Just Drive Car">
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 4</div>
-    <img src="C:\Users\hp\Documents\SonyaSite\Images\CarSlide\Car_03.png"
+    <img src="Images\CarSlide\Car_03.png"
     width="990" height="650" border="3" alt="Just Drive Car">
   </div>
 
-<script src="C:\Users\hp\Documents\SonyaSite\Javascript\Slide.js"></script>
+<script src="Javascript\Slide.js"></script>
 
 <p><font size="7" color="#000080">&nbsp&nbsp<u>About Us</u></p></font>
 <p style="text-align:center;"><font size="5" color="#000080">
@@ -88,7 +88,7 @@ img {
 }
 </style>
 
-<a href="C:\Users\hp\Documents\SonyaSite\Contact.html"><img src="Contact.jpg" 
+<a href="Contact.html"><img src="Contact.jpg" 
      alt="Contact Us NOW!";
      align="center";
      width="600px"; 
