--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ img {
 }
 </style>
 
-<a href="Contact.html"><img src="Contact.jpg" 
+<a href="Contact.html"><img src="Images/Contact.jpg" 
      alt="Contact Us NOW!";
      align="center";
      width="600px"; 
