--- a/UsefulLinks.html
+++ b/UsefulLinks.html
@@ -3,22 +3,21 @@
 <!--Just Drive Reading Useful Links Page-->
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\styles.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\.content.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\CSS\img.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\navbar.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\Roboto.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\Header.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\p.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\table.css">
-
+<link rel="stylesheet" type="text/css" href="CSS\styles.css">
+<link rel="stylesheet" type="text/css" href="CSS\.content.css">
+<link rel="stylesheet" type="text/css" href="CSS\img.css">
+<link rel="stylesheet" type="text/css" href="CSS\navbar.css">
+<link rel="stylesheet" type="text/css" href="CSS\Roboto.css">
+<link rel="stylesheet" type="text/css" href="CSS\Header.css">
+<link rel="stylesheet" type="text/css" href="CSS\p.css">
+<link rel="stylesheet" type="text/css" href="CSS\table.css">
 
 <title> Just Drive Reading Useful Links </title>
 
 <div class="content">
 <div class="header">
-  <a href="C:\Users\hp\Documents\SonyaSite\JDRIndex.html" class="logo">
-  <img src="C:\Users\hp\Documents\SonyaSite\Images\Logos\SonyaLogo.png"
+  <a href="JDRIndex.html" class="logo">
+  <img src="Images\Logos\SonyaLogo.png"
        class="Logo"
        width="300"
        height="150"
@@ -27,8 +26,8 @@
 	</a>
 
 <div class="header-right">  
- <a href="C:\Users\hp\Documents\SonyaSite\Contact.html" class="logo">
-  <img src="C:\Users\hp\Documents\SonyaSite\Images\CallHere.jpg"
+ <a href="Contact.html" class="logo">
+  <img src="Images\CallHere.jpg"
        class="Logo"
        width="300"
        height="150"
@@ -38,10 +37,10 @@
 </div></div>
 
  <div class="navbar">
-  <a href="C:\Users\hp\Documents\SonyaSite\JDRIndex.html">Home</a>
-  <a href="C:\Users\hp\Documents\SonyaSite\Booking.html">Prices & Offers</a>
-  <a href="C:\Users\hp\Documents\SonyaSite\UsefulLinks.html">Useful Links </a>
-  <a href="C:\Users\hp\Documents\SonyaSite\Contact.html">Contact</a>
+  <a href="JDRIndex.html">Home</a>
+  <a href="Booking.html">Prices & Offers</a>
+  <a href="UsefulLinks.html">Useful Links </a>
+  <a href="Contact.html">Contact</a>
 	</div><hr>
 
 <p><font size="7" color="#000080">&nbsp&nbsp<u>Useful Links:</u></p></font>
@@ -102,7 +101,7 @@ img {
 }
 </style>
 
-<a href="C:\Users\hp\Documents\SonyaSite\Contact.html"><img src="C:\Users\hp\Documents\SonyaSite\Images\Contact.jpg" 
+<a href="Contact.html"><img src="Images\Contact.jpg" 
      alt="Contact Us NOW!";
      align="center";
      width="600px"; 
@@ -115,9 +114,9 @@ img {
 <p style="text-align:center;">
 <u><b>Copyright© 2019 Just Drive Reading
 	</p></u></b>
-<p style="text-align:center;"><a href="C:\Users\hp\Documents\SonyaSite\Terms&Conditions.html"><i>Terms & Conditions</a>
+<p style="text-align:center;"><a href="Terms&Conditions.html"><i>Terms & Conditions</a>
 		</i></p>
-<p style="text-align:center;"><a href="C:\Users\hp\Documents\SonyaSite\PrivacyPolicy.html"><i>Privacy Policy</a>
+<p style="text-align:center;"><a href="PrivacyPolicy.html"><i>Privacy Policy</a>
 		</i></p>
 <p style="text-align:right;"><a href="www.pixelpower.co.uk"><i>Created by Pixel Power</a>&nbsp&nbsp
 		</i>
