--- a/Terms&Conditions.html
+++ b/Terms&Conditions.html
@@ -3,21 +3,20 @@
 <!--Just Drive Reading Privacy Policy-->
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\styles.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\.content.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\CSS\img.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\navbar.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\Roboto.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\Header.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\p.css">
+<link rel="stylesheet" type="text/css" href="CSS\styles.css">
+<link rel="stylesheet" type="text/css" href="CSS\.content.css">
+<link rel="stylesheet" type="text/css" href="CSS\img.css">
+<link rel="stylesheet" type="text/css" href="CSS\navbar.css">
+<link rel="stylesheet" type="text/css" href="CSS\Roboto.css">
+<link rel="stylesheet" type="text/css" href="CSS\Header.css">
+<link rel="stylesheet" type="text/css" href="CSS\p.css">
 
-<title> JDR Terms & Conditions
-	</title>
+<title> JDR Terms & Conditions </title>
 
 <div class="content">
 <div class="header">
-<a href="C:\Users\hp\Documents\SonyaSite\JDRIndex.html" class="logo">
-  <img src="C:\Users\hp\Documents\SonyaSite\Images\Logos\SonyaLogo.png"
+<a href="JDRIndex.html" class="logo">
+  <img src="Images\Logos\SonyaLogo.png"
        class="Logo"
        width="300"
        height="150"
@@ -26,8 +25,8 @@
 	</a>
 
 <div class="header-right">  
- <a href="C:\Users\hp\Documents\SonyaSite\Contact.html" class="logo">
-  <img src="C:\Users\hp\Documents\SonyaSite\Images\CallHere.jpg"
+ <a href="Contact.html" class="logo">
+  <img src="Images\CallHere.jpg"
        class="Logo"
        width="300"
        height="150"
@@ -37,10 +36,10 @@
 </div></div>
 
  <div class="navbar">
-  <a href="C:\Users\hp\Documents\SonyaSite\JDRIndex.html">Home</a>
-  <a href="C:\Users\hp\Documents\SonyaSite\Booking.html">Prices & Offers</a>
-  <a href="C:\Users\hp\Documents\SonyaSite\UsefulLinks.html">Useful Links </a>
-  <a href="C:\Users\hp\Documents\SonyaSite\Contact.html">Contact</a>
+  <a href="JDRIndex.html">Home</a>
+  <a href="Booking.html">Prices & Offers</a>
+  <a href="UsefulLinks.html">Useful Links </a>
+  <a href="Contact.html">Contact</a>
 	</div><hr>
 
 <p><font size="7" color="#000080">&nbsp&nbsp<u>Terms & Conditions </u></p></font>
@@ -68,11 +67,11 @@ minimum of 10 hours. This is <b> NOT</b> including any other offers.
 <div class="footer">
 <hr><font size="2" face="kristen ITC">
 <p style="text-align:center;">
-<u><b>Copyright© 2019 Just Drive Reading
+<u><b>CopyrightÂ© 2019 Just Drive Reading
 	</p></u></b>
-<p style="text-align:center;"><a href="C:\Users\hp\Documents\SonyaSite\Terms&Conditions.html"><i>Terms & Conditions</a>
+<p style="text-align:center;"><a href="Terms&Conditions.html"><i>Terms & Conditions</a>
 		</i></p>
-<p style="text-align:center;"><a href="C:\Users\hp\Documents\SonyaSite\PrivacyPolicy.html"><i>Privacy Policy</a>
+<p style="text-align:center;"><a href="PrivacyPolicy.html"><i>Privacy Policy</a>
 		</i></p>
 <p style="text-align:right;"><a href="www.pixelpower.co.uk"><i>Created by Pixel Power</a>&nbsp&nbsp
 		</i>
@@ -80,5 +79,4 @@ minimum of 10 hours. This is <b> NOT</b> including any other offers.
 	</div>
 	</p>
 	</div> <!--Div centerpage-->
-	</body> <!--Background colour-->
 	</html>
