--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -3,23 +3,22 @@
 <!--Just Drive Reading Privacy Policy-->
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\styles.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\.content.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\ImageOverImage.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\SlideshowContainer.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\CSS\img.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\navbar.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\Roboto.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\Header.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\p.css">
+<link rel="stylesheet" type="text/css" href="CSS\styles.css">
+<link rel="stylesheet" type="text/css" href="CSS\.content.css">
+<link rel="stylesheet" type="text/css" href="CSS\ImageOverImage.css">
+<link rel="stylesheet" type="text/css" href="CSS\SlideshowContainer.css">
+<link rel="stylesheet" type="text/css" href="CSS\img.css">
+<link rel="stylesheet" type="text/css" href="CSS\navbar.css">
+<link rel="stylesheet" type="text/css" href="CSS\Roboto.css">
+<link rel="stylesheet" type="text/css" href="CSS\Header.css">
+<link rel="stylesheet" type="text/css" href="CSS\p.css">
 
-<title> JDR Privacy Policy
-	</title>
+<title> JDR Privacy Policy </title>
 
 <div class="content">
 <div class="header">
- <a href="C:\Users\hp\Documents\SonyaSite\JDRIndex.html" class="logo">
-  <img src="C:\Users\hp\Documents\SonyaSite\Images\Logos\SonyaLogo.png"
+ <a href="JDRIndex.html" class="logo">
+  <img src="Images\Logos\SonyaLogo.png"
        class="Logo"
        width="300"
        height="150"
@@ -27,8 +26,8 @@
        alt="Just Drive Reading">
 	</a>
 <div class="header-right">  
-<a href="C:\Users\hp\Documents\SonyaSite\Contact.html" class="logo">
-  <img src="C:\Users\hp\Documents\SonyaSite\Images\Contact.jpg"
+<a href="Contact.html" class="logo">
+  <img src="Images\Contact.jpg"
        class="Logo"
        width="300"
        height="150"
@@ -38,10 +37,10 @@
 </div></div>
 
 <div class="navbar">
-  <a href="C:\Users\hp\Documents\SonyaSite\JDRIndex.html">Home</a>
-  <a href="C:\Users\hp\Documents\SonyaSite\Booking.html">Prices & Offers</a>
-  <a href="C:\Users\hp\Documents\SonyaSite\UsefulLinks.html">Useful Links </a>
-  <a href="C:\Users\hp\Documents\SonyaSite\Contact.html">Contact</a>
+  <a href="JDRIndex.html">Home</a>
+  <a href="Booking.html">Prices & Offers</a>
+  <a href="UsefulLinks.html">Useful Links </a>
+  <a href="Contact.html">Contact</a>
 	</div><hr>
 
 <p><font size="7" color="#000080">&nbsp&nbsp<u>Privacy Policy</u></p></font>
@@ -75,11 +74,11 @@ Subsequently any information given will not be stored or discussed with any thir
 <div class="footer">
 <hr><font size="2" face="kristen ITC">
 <p style="text-align:center;">
-<u><b>Copyright© 2019 Just Drive Reading
+<u><b>CopyrightÂ© 2019 Just Drive Reading
 	</p></u></b>
-<p style="text-align:center;"><a href="C:\Users\hp\Documents\SonyaSite\Terms&Conditions.html"><i>Terms & Conditions</a>
+<p style="text-align:center;"><a href="Terms&Conditions.html"><i>Terms & Conditions</a>
 		</i></p>
-<p style="text-align:center;"><a href="C:\Users\hp\Documents\SonyaSite\PrivacyPolicy.html"><i>Privacy Policy</a>
+<p style="text-align:center;"><a href="PrivacyPolicy.html"><i>Privacy Policy</a>
 		</i></p>
 <p style="text-align:right;"><a href="www.pixelpower.co.uk"><i>Created by Pixel Power</a>&nbsp&nbsp
 		</i>
@@ -87,7 +86,6 @@ Subsequently any information given will not be stored or discussed with any thir
 	</div>
 	</p>
 	</div> <!--Div centerpage-->
-	</body> <!--Background colour-->
 	</html>
 
 
