--- a/Booking.html
+++ b/Booking.html
@@ -3,22 +3,21 @@
 <!--Just Drive Reading Prices Page-->
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\styles.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\.content.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\CSS\img.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\navbar.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\Header.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\p.css">
-<link rel="stylesheet" type="text/css" href="C:\Users\hp\Documents\SonyaSite\CSS\table.css">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<link rel="stylesheet" type="text/css" href="CSS\styles.css">
+<link rel="stylesheet" type="text/css" href="CSS\.content.css">
+<link rel="stylesheet" type="text/css" href="CSS\img.css">
+<link rel="stylesheet" type="text/css" href="CSS\navbar.css">
+<link rel="stylesheet" type="text/css" href="CSS\Header.css">
+<link rel="stylesheet" type="text/css" href="CSS\p.css">
+<link rel="stylesheet" type="text/css" href="CSS\table.css">
 
-
-<title> Just Drive Reading Prices
-	</title>
+<title> Just Drive Reading Prices </title>
 
 <div class="content">
 <div class="header">
-  <a href="C:\Users\hp\Documents\SonyaSite\JDRIndex.html" class="logo">
-  <img src="C:\Users\hp\Documents\SonyaSite\Images\Logos\SonyaLogo.png"
+  <a href="JDRIndex.html" class="logo">
+  <img src="Images\Logos\SonyaLogo.png"
        class="Logo"
        width="300"
        height="150"
@@ -27,8 +26,8 @@
 	</a>
 
 <div class="header-right">  
- <a href="C:\Users\hp\Documents\SonyaSite\Contact.html" class="logo">
-  <img src="C:\Users\hp\Documents\SonyaSite\Images\CallHere.jpg"
+ <a href="Contact.html" class="logo">
+  <img src="Images\CallHere.jpg"
        class="Logo"
        width="300"
        height="150"
@@ -38,10 +37,10 @@
 </div></div>
 
  <div class="navbar">
-  <a href="C:\Users\hp\Documents\SonyaSite\JDRIndex.html">Home</a>
-  <a href="C:\Users\hp\Documents\SonyaSite\Booking.html">Prices & Offers</a>
-  <a href="C:\Users\hp\Documents\SonyaSite\UsefulLinks.html">Useful Links </a>
-  <a href="C:\Users\hp\Documents\SonyaSite\Contact.html">Contact</a>
+  <a href="JDRIndex.html">Home</a>
+  <a href="Booking.html">Prices & Offers</a>
+  <a href="UsefulLinks.html">Useful Links </a>
+  <a href="Contact.html">Contact</a>
 	</div><hr>
 
 <p><font size="7" color="#000080">&nbsp&nbsp<u>Pricing</u></p></font>
@@ -51,15 +50,15 @@
     <th>Time:</th>
   </tr>
   <tr>
-    <td>£60.00</td>
+    <td>Â£60.00</td>
     <td>120 Minutes (2 Hours)</td>
   </tr>
   <tr>
-    <td>£45.00</td>
+    <td>Â£45.00</td>
     <td>120 Minutes (1 1/2 Hours)</td>
   </tr>
   <tr>
-    <td>£35.00</td>
+    <td>Â£35.00</td>
     <td>60 Minutes (1 Hours)</td>
   	</tr>
 	</table>
@@ -71,7 +70,7 @@
   	</i></a></li></p>
 
   <li><p>* 10% discount for <b>ALL</b> block bookings.<br>
-  <a href="C:\Users\hp\Documents\SonyaSite\Terms&Conditions.html"><i>See Terms & Conditions
+  <a href="Terms&Conditions.html"><i>See Terms & Conditions
   	</i></a></li> 
 </font></ul></p>  
 
@@ -82,7 +81,7 @@ img {
   margin-right: auto;
 }
 </style>
-<a href="C:\Users\hp\Documents\SonyaSite\Contact.html"><img src="C:\Users\hp\Documents\SonyaSite\Images\Contact.jpg" 
+<a href="Contact.html"><img src="Images\Contact.jpg" 
      alt="Contact Us NOW!";
      align="center";
      width="600px"; 
@@ -93,11 +92,11 @@ img {
 <div class="footer">
 <hr><font size="2" face="kristen ITC">
 <p style="text-align:center;">
-<u><b>Copyright© 2019 Just Drive Reading
+<u><b>CopyrightÂ© 2019 Just Drive Reading
 	</p></u></b>
-<p style="text-align:center;"><a href="C:\Users\hp\Documents\SonyaSite\Terms&Conditions.html"><i>Terms & Conditions</a>
+<p style="text-align:center;"><a href="Terms&Conditions.html"><i>Terms & Conditions</a>
 		</i></p>
-<p style="text-align:center;"><a href="C:\Users\hp\Documents\SonyaSite\PrivacyPolicy.html"><i>Privacy Policy</a>
+<p style="text-align:center;"><a href="PrivacyPolicy.html"><i>Privacy Policy</a>
 		</i></p>
 <p style="text-align:right;"><a href="www.pixelpower.co.uk"><i>Created by Pixel Power</a>&nbsp&nbsp
 		</i>
@@ -105,5 +104,4 @@ img {
 	</div>
 	</p>
 	</div> <!--Div centerpage-->
-	</body> <!--Background colour-->
 	</html>
