--- a/UsefulLinks.html
+++ b/UsefulLinks.html
@@ -16,7 +16,7 @@
 
 <div class="content">
 <div class="header">
-  <a href="JDRIndex.html" class="logo">
+  <a href="Index.html" class="logo">
   <img src="Images\Logos\SonyaLogo.png"
        class="Logo"
        width="300"
@@ -37,7 +37,7 @@
 </div></div>
 
  <div class="navbar">
-  <a href="JDRIndex.html">Home</a>
+  <a href="Index.html">Home</a>
   <a href="Booking.html">Prices & Offers</a>
   <a href="UsefulLinks.html">Useful Links </a>
   <a href="Contact.html">Contact</a>
