--- a/Terms&Conditions.html
+++ b/Terms&Conditions.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" type="text/css" href="CSS\Header.css">
 <link rel="stylesheet" type="text/css" href="CSS\p.css">
 
-<title> JDR Terms & Conditions </title>
+<title>Terms & Conditions </title>
 
 <div class="content">
 <div class="header">
