--- a/Booking.html
+++ b/Booking.html
@@ -12,11 +12,11 @@
 <link rel="stylesheet" type="text/css" href="CSS\p.css">
 <link rel="stylesheet" type="text/css" href="CSS\table.css">
 
-<title> Just Drive Reading Prices </title>
+<title>Prices </title>
 
 <div class="content">
 <div class="header">
-  <a href="JDRIndex.html" class="logo">
+  <a href="Index.html" class="logo">
   <img src="Images\Logos\SonyaLogo.png"
        class="Logo"
        width="300"
@@ -37,7 +37,7 @@
 </div></div>
 
  <div class="navbar">
-  <a href="JDRIndex.html">Home</a>
+  <a href="Index.html">Home</a>
   <a href="Booking.html">Prices & Offers</a>
   <a href="UsefulLinks.html">Useful Links </a>
   <a href="Contact.html">Contact</a>
