--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <title>Home </title>
 
-<div class="content">
+<div class=".content">
 <div class="header">
   <a href="Index.html" class="logo">
   <img src="Images\Logos\SonyaLogo.png"
