--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <title>Home </title>
 
+<body>
 <div class=".content">
 <div class="header">
   <a href="Index.html" class="logo">
@@ -110,4 +111,5 @@ img {
 	</div>
 	</p>
 	</div> <!--Div centerpage-->
+	</body>
 	</html>
