--- a/index.html
+++ b/index.html
@@ -80,21 +80,15 @@ recieve a training schedule to suit your needs so you can keep track of your
 progress.  
 	</p></font>
 
-<style>
-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-</style>
-
+ <div class="img">
 <a href="Contact.html"><img src="Images/Contact.jpg" 
      alt="Contact Us NOW!";
      align="center";
      width="600px"; 
      heigh="90px";
      border="2";></a>	
-
+</div>
+	 
 <!--Site Footer-->
 <div class="footer">
 <hr><font size="2" face="kristen ITC">
