--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <title>Home </title>
 
 <body>
-<div class=".content">
+<div class=".content" style="width:100%;height:90px;background-color:Red;margin-left:50px;">
 <div class="header">
   <a href="Index.html" class="logo">
   <img src="Images\Logos\SonyaLogo.png"
@@ -105,6 +105,5 @@ progress.
 	</div>
 	</p>
 	</div> <!--Div centerpage-->
-</div>
 	</body>
 	</html>
