--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" type="text/css" href="CSS\styles.css">
-<link rel="stylesheet" type="text/css" href="CSS\.content.css">
+<link rel="stylesheet" type="text/css" href="CSS\content-container.css">
 <link rel="stylesheet" type="text/css" href="CSS\SlideshowContainer.css">
 <link rel="stylesheet" type="text/css" href="CSS\img.css">
 <link rel="stylesheet" type="text/css" href="CSS\navbar.css">
@@ -16,7 +16,7 @@
 <title>Home </title>
 
 <body>
-<div class=".content" style="width:100%;height:90px;background-color:Red;margin-left:50px;">
+<div class="content-container">
 <div class="header">
   <a href="Index.html" class="logo">
   <img src="Images\Logos\SonyaLogo.png"
