--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <HTML Lang="en">
 <!--Just Drive Reading Home Page-->
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1,">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" type="text/css" href="CSS\styles.css">
 <link rel="stylesheet" type="text/css" href="CSS\content-container.css">
@@ -15,7 +15,7 @@
 
 <title>Home </title>
 
-<div class="content-container">
+<div class="container-content-container">
 <div class="header">
   <a href="Index.html" class="logo">
   <img src="Images\Logos\SonyaLogo.png"
