--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <title>Home </title>
 
 <div class="container-content-container">
-	<div class="wrap">
+	<div id="wrap">
 <div class="header">
   <a href="Index.html" class="logo">
   <img src="Images\Logos\SonyaLogo.png"
