--- a/Terms&Conditions.html
+++ b/Terms&Conditions.html
@@ -4,7 +4,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="CSS\styles.css">
-<link rel="stylesheet" type="text/css" href="CSS\.content.css">
+<link rel="stylesheet" type="text/css" href="CSS\content-container.css">
 <link rel="stylesheet" type="text/css" href="CSS\img.css">
 <link rel="stylesheet" type="text/css" href="CSS\navbar.css">
 <link rel="stylesheet" type="text/css" href="CSS\Roboto.css">
@@ -13,7 +13,7 @@
 
 <title>Terms & Conditions </title>
 
-<div class="content">
+<div id="wrap">
 <div class="header">
 <a href="Index.html" class="logo">
   <img src="Images\Logos\SonyaLogo.png"
