--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -4,7 +4,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="CSS\styles.css">
-<link rel="stylesheet" type="text/css" href="CSS\.content.css">
+<link rel="stylesheet" type="text/css" href="CSS\content-container.css">
 <link rel="stylesheet" type="text/css" href="CSS\ImageOverImage.css">
 <link rel="stylesheet" type="text/css" href="CSS\SlideshowContainer.css">
 <link rel="stylesheet" type="text/css" href="CSS\img.css">
@@ -15,7 +15,7 @@
 
 <title> JDR Privacy Policy </title>
 
-<div class="content">
+<div id="wrap">
 <div class="header">
  <a href="JDRIndex.html" class="logo">
   <img src="Images\Logos\SonyaLogo.png"
