--- a/Booking.html
+++ b/Booking.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" type="text/css" href="CSS\styles.css">
-<link rel="stylesheet" type="text/css" href="CSS\.content.css">
+<link rel="stylesheet" type="text/css" href="CSS\content-container.css">
 <link rel="stylesheet" type="text/css" href="CSS\img.css">
 <link rel="stylesheet" type="text/css" href="CSS\navbar.css">
 <link rel="stylesheet" type="text/css" href="CSS\Header.css">
@@ -14,7 +14,7 @@
 
 <title>Prices </title>
 
-<div class="content">
+<div id="wrap">
 <div class="header">
   <a href="Index.html" class="logo">
   <img src="Images\Logos\SonyaLogo.png"
