--- a/Contact.html
+++ b/Contact.html
@@ -15,7 +15,7 @@
 
 <title> Just Drive Reading Contact </title>
 
-<div class="content-container">
+<div id="wrap">
 <div class="header">
   <a href="Index.html" class="logo">
   <img src="Images\Logos\SonyaLogo.png"
