--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" type="text/css" href="CSS\p.css">
 
 <title>Home </title>
-
+<div id="body">
 	<div id="wrap">
 <div class="header">
   <a href="Index.html" class="logo">
