--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -37,7 +37,7 @@
 </div></div>
 
 <div class="navbar">
-  <a href="JDRIndex.html">Home</a>
+  <a href="Index.html">Home</a>
   <a href="Booking.html">Prices & Offers</a>
   <a href="UsefulLinks.html">Useful Links </a>
   <a href="Contact.html">Contact</a>
