--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" type="text/css" href="CSS\Roboto.css">
 <link rel="stylesheet" type="text/css" href="CSS\Header.css">
 <link rel="stylesheet" type="text/css" href="CSS\p.css">
+<link href="/YOUR_PATH/favicon.ico" rel="icon" type="image/x-icon" />
 
 <title>Home </title>
 <body>
