--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -53,7 +53,7 @@
 [ For more information about us, visit the <a href="#">Pixel Powers Site</a> ]</p></font>
 
 <p><font size="6" color="#000080">&nbsp&nbsp<u>2. How we use you Personal Data</u></p></font>
-<p style="text-align:left;"><font size="4" color="#000080"> 
+<p style="text-align:center;"><font size="4" color="#000080"> 
 We may process data about your use of our website and services ("usage data").<br> 
 The usage data may include your IP address, geographical location, browser type and version, operating system, referral source, length of visit, page views and website navigation paths, as well as information about the timing, frequency and pattern of your service use.
 <br>The source of the usage data is our analytics system. This usage data may be processed for the purposes of analysing the use of the Just Drive Reading Website and its services. 
