--- a/Booking.html
+++ b/Booking.html
@@ -71,7 +71,7 @@
 <p><font size="7" color="#000080">&nbsp&nbsp<u>Offers</u></p></font>
 <ul style="list-style-type:circle;"><font color="#000080" size="5">
   <li><i><p>* The price of the first lesson will be two hours for the price of one.</i><br>
-  <a href="C:\Users\hp\Documents\SonyaSite\Terms&Conditions.html"><i>See Terms & Conditions
+  <a href="Terms&Conditions.html"><i>See Terms & Conditions
   	</i></a></li></p>
 
   <li><p>* 10% discount for <b>ALL</b> block bookings.<br>
