--- a/UsefulLinks.html
+++ b/UsefulLinks.html
@@ -54,7 +54,7 @@
 &nbsp&nbspSide Note: <b>DVSA</b> stands for Driver & Vehicle Standards Agency.<br>
 &nbsp&nbsp<b>DVLA</b> stands for Drive & Vehicle Licensing Agency.
 	</p></font>
-<ul>
+<ul style="color:#000080">
   <li><a href="https://www.gov.uk/apply-first-provisional-driving-licence">
        <p><font size="5" color="#000080">Applying for a Provisional License
        </p></li></a></font>
@@ -83,7 +83,7 @@
     <td><a href="https://www.amazon.co.uk/official-DVSA-theory-test-drivers/dp/0115534652/ref=pd_sbs_14_2/259-5225742-4840446?_encoding=UTF8&pd_rd_i=0115534652&pd_rd_r=8d9640f4-718b-4e5d-bb54-ad5347c599a0&pd_rd_w=C2nEj&pd_rd_wg=dDiQr&pf_rd_p=15756fbb-4ceb-4379-9d2c-7af36daab01e&pf_rd_r=F7KSBG8D925RD5ABVA1C&psc=1&refRID=F7KSBG8D925RD5ABVA1C">ISBN 978-0-11-5534652-0</td></a>
   </tr>
 	</table><br><br><br><br><br><br><br><br><br>
-<ul>
+<br><ul style="color:#000080">
 <li><p><a href="https://www.gov.uk/take-practice-theory-test"><font size="5" color="#000080">Mock Theory Test</a> - For the Mock Theory Driving Test there are many sites online that you can use to revise. 
 Here at Just Drive we recommend the following sites:<br>
 <a href="https://www.gov.uk/take-practice-theory-test">The GOV Site</a><br>
