--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ I am a reliable and friendly female driving instructor covering
 Special Educational Needs, I offer high-quality, bespoke driving lessons tailored to suit 
 any individual.<br>
 <br>All driving lessons are conducted on a one-to-one basis. You will
-recieve a training schedule to suit your needs so you can keep track of your
+receive a training schedule to suit your needs so you can keep track of your
 progress.  
 	</p></font>
 
