--- a/Booking.html
+++ b/Booking.html
@@ -49,7 +49,7 @@
 	</div><hr>
 
 <p><font size="7" color="#000080">&nbsp&nbsp<u>Pricing</u></p></font>
-/* <table>
+<!-- <table>
   <tr>
     <th>Price:</th>
     <th>Time:</th>
@@ -66,7 +66,7 @@
     <td>£35.00</td>
     <td>60 Minutes (1 Hours)</td>
   	</tr>
-	</table> */
+	</table> --> 
 
 	
 <p><font size="7" color="#000080">&nbsp&nbsp<u>Offers</u></p></font>
