--- a/Booking.html
+++ b/Booking.html
@@ -49,6 +49,7 @@
 	</div><hr>
 
 <p><font size="7" color="#000080">&nbsp&nbsp<u>Pricing</u></p></font>
+	<p><font size="5" color="#000080">&nbsp&nbsp<u>Offers</u></p></font><br>
 <!-- <table>
   <tr>
     <th>Price:</th>
