--- a/Booking.html
+++ b/Booking.html
@@ -49,8 +49,8 @@
 	</div><hr>
 
 <p><font size="7" color="#000080">&nbsp&nbsp<u>Pricing</u></p></font>
-	<p><font size="5" color="#000080">&nbsp&nbsp<u>
-		For more information on prices please contact me.</u></p></font><br>
+	<p><font size="5" color="#000080">&nbsp&nbsp
+		For more information on prices please contact me.</p></font><br>
 <!-- <table>
   <tr>
     <th>Price:</th>
