--- a/Booking.html
+++ b/Booking.html
@@ -50,7 +50,7 @@
 
 <p><font size="7" color="#000080">&nbsp&nbsp<u>Pricing</u></p></font>
 	<p><font size="5" color="#000080">&nbsp&nbsp
-		For more information on prices please contact me.</p></font><br>
+		For more information on prices please contact me.</p></font>
 <!-- <table>
   <tr>
     <th>Price:</th>
