--- a/Booking.html
+++ b/Booking.html
@@ -50,7 +50,8 @@
 
 <p><font size="7" color="#000080">&nbsp&nbsp<u>Pricing</u></p></font>
 	<p><font size="5" color="#000080">&nbsp&nbsp
-		For more information on prices please head over to the contact page.</p></font>
+		For more information on prices please feel free to call me. 
+		<br>(For information on contact details head over to te contact page.)</p></font>
 <!-- <table>
   <tr>
     <th>Price:</th>
