--- a/UsefulLinks.html
+++ b/UsefulLinks.html
@@ -93,7 +93,7 @@ Here at Just Drive we recommend the following sites:<br>
 <a href="https://www.theory-test-online.co.uk/free-theory-test-demo.htm">Theory Test Online</a><br>
 <a href="https://www.safedrivingforlife.info/take-official-free-practice-driving-theory-test/car-practice-theory-tests/car-practice-test-one">Safe Driving For Life</a></font><br>
 	</p></li>
-  <li><font size="5" color="#000080"><a href="https://www.gov.uk/guidance/the-highway-code"><p>FREE Hazard Perception Test</font></a> 
+  <li><font size="5" color="#000080"><a href="https://www.safedrivingforlife.info/practice-hazard-perception-test"><p>FREE Hazard Perception Test</font></a> 
 	</li></p>
   <li><font size="5" color="#000080"><a href="https://www.gov.uk/guidance/the-highway-code"><p>The Highway Code <font size="5" color="#000080"></a>
 	</p></li></ul>
