--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -83,7 +83,7 @@ Subsequently any information given will not be stored or discussed with any thir
 		</i></p>
 <p style="text-align:center;"><a href="PrivacyPolicy.html"><i>Privacy Policy</a>
 		</i></p>
-<p style="text-align:right;"><a href="www.pixelpower.co.uk"><i>Created by Pixel Power</a>&nbsp&nbsp
+<p style="text-align:right;"><a href="https://github.com/JustDriveReading/JDRSite"><i>Created by Pixel Power</a>&nbsp&nbsp
 		</i>
 	</font>
 	</div>
