--- a/UsefulLinks.html
+++ b/UsefulLinks.html
@@ -125,7 +125,7 @@ img {
 		</i></p>
 <p style="text-align:center;"><a href="PrivacyPolicy.html"><i>Privacy Policy</a>
 		</i></p>
-<p style="text-align:right;"><a href="www.pixelpower.co.uk"><i>Created by Pixel Power</a>&nbsp&nbsp
+<p style="text-align:right;"><a href="https://github.com/JustDriveReading/JDRSitek"><i>Created by Pixel Power</a>&nbsp&nbsp
 		</i>
 	</font>
 	</div>
