--- a/UsefulLinks.html
+++ b/UsefulLinks.html
@@ -86,7 +86,9 @@
 	</table><br><br><br><br><br><br><br><br><br>
 
 <br><br><br><br> <ul style="color:#000080">
-<li><p><a href="https://www.gov.uk/take-practice-theory-test"><font size="5" color="#000080">Mock Theory Test</a> - For the Mock Theory Driving Test there are many sites online that you can use to revise. 
+<li><p><a href="https://www.gov.uk/take-practice-theory-test"><font size="5" color="#000080">Mock Theory Test</a>
+
+<br> - For the Mock Theory Driving Test there are many sites online that you can use to revise. 
 Here at Just Drive we recommend the following sites:<br>
 <a href="https://www.gov.uk/take-practice-theory-test">The GOV Site</a><br>
 <a href="https://toptests.co.uk">Top Tests</a><br>
@@ -125,7 +127,7 @@ img {
 		</i></p>
 <p style="text-align:center;"><a href="PrivacyPolicy.html"><i>Privacy Policy</a>
 		</i></p>
-<p style="text-align:right;"><a href="https://github.com/JustDriveReading/JDRSitek"><i>Created by Pixel Power</a>&nbsp&nbsp
+<p style="text-align:right;"><a href="https://github.com/JustDriveReading/JDRSite"><i>Created by Pixel Power</a>&nbsp&nbsp
 		</i>
 	</font>
 	</div>
