--- a/UsefulLinks.html
+++ b/UsefulLinks.html
@@ -68,8 +68,8 @@
     <th>ISBN:</th>
   </tr>
   <tr>
-    <td><a href="amazon.co.uk/DVSA-Official-2015-Highway-Code/dp/0115533427/ref=pd_bxgy_14_img_3/259-5225742-4840446?_encoding=UTF8&pd_rd_i=0115533427&pd_rd_r=15b3d0cf-8edd-4995-b161-cc184115dc05&pd_rd_w=JYXiS&pd_rd_wg=POdrk&pf_rd_p=07e3e597-b71b-4701-a3fd-d79c50f48406&pf_rd_r=JENZQCPWRMVN2F7NCA1W&psc=1&refRID=JENZQCPWRMVN2F7NCA1W">The Official Highway Code</td></a>
-    <td><a href="amazon.co.uk/DVSA-Official-2015-Highway-Code/dp/0115533427/ref=pd_bxgy_14_img_3/259-5225742-4840446?_encoding=UTF8&pd_rd_i=0115533427&pd_rd_r=15b3d0cf-8edd-4995-b161-cc184115dc05&pd_rd_w=JYXiS&pd_rd_wg=POdrk&pf_rd_p=07e3e597-b71b-4701-a3fd-d79c50f48406&pf_rd_r=JENZQCPWRMVN2F7NCA1W&psc=1&refRID=JENZQCPWRMVN2F7NCA1W">ISBN 978-0-11-553342-6</td></a>
+    <td><a href="https://www.amazon.co.uk/Official-DVSA-Highway-Code/dp/0115533427?SubscriptionId=AKIAILSHYYTFIVPWUY6Q&tag=duc08-21&linkCode=xm2&camp=2025&creative=165953&creativeASIN=0115533427">The Official Highway Code</td></a>
+    <td><a href="https://www.amazon.co.uk/Official-DVSA-Highway-Code/dp/0115533427?SubscriptionId=AKIAILSHYYTFIVPWUY6Q&tag=duc08-21&linkCode=xm2&camp=2025&creative=165953&creativeASIN=0115533427"</td></a>
   </tr>
   <tr>
     <td><a href="https://www.amazon.co.uk/dp/0115532900/ref=sspa_dk_detail_2?psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUEzQzFUODUwV0xQWUdPJmVuY3J5cHRlZElkPUEwNDA1ODE1MjMxV0VYUktXMk9BVyZlbmNyeXB0ZWRBZElkPUEwMTY1NTE5Mkk4UkgwWFZQSEZXRSZ3aWRnZXROYW1lPXNwX2RldGFpbCZhY3Rpb249Y2xpY2tSZWRpcmVjdCZkb05vdExvZ0NsaWNrPXRydWU=">The Official DVSA Guide to Driving</td></a>
