--- a/UsefulLinks.html
+++ b/UsefulLinks.html
@@ -86,7 +86,7 @@
 	</table><br><br><br><br><br><br><br><br><br>
 
 <br><br><br><br> <ul style="color:#000080">
-<li><p><a href="https://www.gov.uk/take-practice-theory-test"><font size="5" color="#000080">Theory Test - The site to apply for the Theory Test</a>
+<li><p><a href="https://www.gov.uk/take-practice-theory-test"><font size="5" color="#000080">Theory Test</a> - The site to apply for the Theory Test
 
 <br><br> - For the Mock Theory Driving Test there are many sites online that you can use to revise. 
 Here at Just Drive we recommend the following sites:<br>
