--- a/UsefulLinks.html
+++ b/UsefulLinks.html
@@ -90,14 +90,13 @@
 
 <br><br> - For the Mock Theory Driving Test there are many sites online that you can use to revise. 
 Here at Just Drive we recommend the following sites:<br>
-<a href="https://www.gov.uk/take-practice-theory-test">The GOV Site</a><br>
 <a href="https://toptests.co.uk">Top Tests</a><br>
 <a href="https://www.theory-test-online.co.uk/free-theory-test-demo.htm">Theory Test Online</a><br>
 <a href="https://www.safedrivingforlife.info/take-official-free-practice-driving-theory-test/car-practice-theory-tests/car-practice-test-one">Safe Driving For Life</a></font><br>
 	</p></li>
   <li><font size="5" color="#000080"><a href="https://www.safedrivingforlife.info/practice-hazard-perception-test"><p>FREE Practise Hazard Perception Test</font></a> 
 	</li></p>
-  <li><font size="5" color="#000080"><a href="https://www.gov.uk/guidance/the-highway-code"><p>The Highway Code <font size="5" color="#000080"></a>
+  <li><font size="5" color="#000080"><a href="https://www.gov.uk/guidance/the-highway-code"><p>The Highway Code <font size="5" color="#000080"></a> - A link to the government's site Highway Code
 	</p></li></ul>
 <p><font size="5" color="#000080">&nbsp&nbsp&nbsp&nbspIf your don't know where to start head to <i><a href="https://www.gov.uk/browse/driving">Gov.uk</i></a> site for more information.
        </font></p>
