--- a/UsefulLinks.html
+++ b/UsefulLinks.html
@@ -96,7 +96,7 @@ Here at Just Drive we recommend the following sites:<br>
 	</p></li>
   <li><font size="5" color="#000080"><a href="https://www.safedrivingforlife.info/practice-hazard-perception-test"><p>FREE Practise Hazard Perception Test</font></a> 
 	</li></p>
-  <li><font size="5" color="#000080"><a href="https://www.gov.uk/guidance/the-highway-code"><p>The Highway Code <font size="5" color="#000080"></a> - A link to the government's site Highway Code
+  <li><font size="5" color="#000080"><a href="https://www.gov.uk/guidance/the-highway-code"><p>The Highway Code <font size="5" color="#000080"></a> - A link to the government's site on the Highway Code
 	</p></li></ul>
 <p><font size="5" color="#000080">&nbsp&nbsp&nbsp&nbspIf your don't know where to start head to <i><a href="https://www.gov.uk/browse/driving">Gov.uk</i></a> site for more information.
        </font></p>
